--- a/_posts/articles/2016-10-01-welcome.md
+++ b/_posts/articles/2016-10-01-welcome.md
@@ -1,6 +1,6 @@
 ---
 layout: article
-title:  "Welcome! <font size="10">[EN][CH]</font>"
+title:  "Welcome <font size="10">[EN][CH]</font>"
 categories: articles
 modified: 2016-10-01T16:28:57-04:00
 share: false
