--- a/_posts/bac/2020-05-02-welcome.md
+++ b/_posts/bac/2020-05-02-welcome.md
@@ -2,12 +2,12 @@
 layout: article
 title: "Welcome!"
 categories: articles
-excerpt: "Welcome to my Blog!   
-[EN/CH]"
+excerpt: "Welcome to Kun Li's homepage! [EN/CH]"
 tags: [thoughts]
 modified: 2020-05-02
 image:
-  feature: 1600x800.gif
+  feature: ./blog/welcome/god.JPG
+  teaser: ./blog/welcome/god.JPG
 ads: false  
 ---
 
