--- a/_posts/articles/2020-05-03-sc19.md
+++ b/_posts/articles/2020-05-03-sc19.md
@@ -1,28 +1,24 @@
 ---
 layout: article
-title: "A Post with Images"
+title: "A Post about SC19."
 categories: articles
-excerpt: "Examples and code for displaying images in posts."
-tags: [sample, images, test]
-ads: true
+excerpt: "Experience of SC19 in Denver. [CH]"
+tags: [conference]
+image:
+  teaser: ./blog/sc19/coloradocenter.jpg
+ads: false
 ---
 
 Here are some examples of what a post with images might look like. If you want to display two or three images next to each other responsively use `figure` with the appropriate `class`. Each instance of `figure` is auto-numbered and displayed in the caption.
 
 {% include toc.html %}
 
-## Markdown images
-
-![sample image](http://placehold.it/900x450.gif "placeholder")
-
-[![sample image](http://placehold.it/900x450.gif)](http://placehold.it "A simple image placeholder service.")
-
 ## Figures (for images or video)
 
 ### One Up
 
 <figure>
-	<a href="http://placehold.it/900x450.gif"><img src="http://placehold.it/900x450.gif"></a>
+	<a href="./blog/sc19/coloradocenter.jpg"><img src="./blog/sc19/coloradocenter.jpg"></a>
 	<figcaption>Image caption.</figcaption>
 </figure>
 
