--- a/_posts/articles/2020-05-03-sc19.md
+++ b/_posts/articles/2020-05-03-sc19.md
@@ -2,10 +2,10 @@
 layout: article
 title: "A Post about SC19."
 categories: articles
-excerpt: "Experience of SC19 in Denver. [CH]"
+excerpt: "Experience of SC19 in Denver.   [CH]"
 tags: [conference]
 image:
-  teaser: ./blog/sc19/coloradocenter.jpg
+  teaser: ./blog/sc19/coloradocenter_teaser.jpg
 ads: false
 ---
 
@@ -18,7 +18,7 @@ Here are some examples of what a post with images might look like. If you want t
 ### One Up
 
 <figure>
-	<a href="./blog/sc19/coloradocenter.jpg"><img src="./blog/sc19/coloradocenter.jpg"></a>
+	<a href="https://www.likun.tech/images/blog/sc19/coloradocenter.jpg"><img src="https://www.likun.tech/images/blog/sc19/coloradocenter.jpg"></a>
 	<figcaption>Image caption.</figcaption>
 </figure>
 
