--- a/_posts/articles/2020-05-02-welcome.md
+++ b/_posts/articles/2020-05-02-welcome.md
@@ -7,7 +7,7 @@ tags: [thoughts]
 modified: 2020-05-02
 image:
   feature: ./blog/welcome/god.JPG
-  teaser: ./blog/welcome/god.JPG
+  teaser: ./blog/welcome/god_teaser
 ads: false  
 ---
 
