--- a/_posts/articles/2020-05-02-welcome.md
+++ b/_posts/articles/2020-05-02-welcome.md
@@ -13,7 +13,7 @@ ads: false
 
 ### English version [EN]
 
-Hi, my name is Kun Li. I got my Bachelor’s Degree in Computer Science from [Elite Class][elite] of [Shandong University][sdu] (Project-985) in 2016. I am now a PhD Candidate in University of Chinese Academy of Sciences, advised by Prof. Yunquan Zhang. Also, I am a student at State Key Lab of Computer Architecture in Institute of Computing Technology, where I do my research work.
+Hi, my name is Kun Li. I got my Bachelor’s Degree in Computer Science from [Elite Class][elite] of [Shandong University][sdu] (Project-985) in 2016. I am now a PhD Candidate in [University of Chinese Academy of Sciences][ucas], advised by Prof. Yunquan Zhang. Also, I am a student at State Key Lab of Computer Architecture in Institute of Computing Technology, where I do my research work.
 * Science geek with a (pseudo) literary heart.
 * Strive to keep thinking independently in this noisy era.
 * Want to be a funny man.
@@ -31,7 +31,7 @@ Any suggestion, opinion, and exchange is welcome. You can send an email to my [m
 
 
 ### 中文版本 [CH]
-大家好，我是李琨。我于2016年在[山东大学][sdu]（985工程）计算机学院[菁英班][elite]获得了工学学士学位。现在，我是中国科学院大学的一名博士研究生，导师为张云泉老师。同时，我也是中国科学院计算技术研究所的计算机体系结构国家重点实验室的一名学生，从事我的科研工作。
+大家好，我是李琨。我于2016年在[山东大学][sdu]（985工程）计算机学院[菁英班][elite]获得了工学学士学位。现在，我是[中国科学院大学][ucas]的一名博士研究生，导师为张云泉老师。同时，我也是中国科学院计算技术研究所的计算机体系结构国家重点实验室的一名学生，从事我的科研工作。
 
 * 有着一颗（伪）文艺心的理工男。
 * 在喧杂的时代努力地保持独立思考。
@@ -50,6 +50,7 @@ Any suggestion, opinion, and exchange is welcome. You can send an email to my [m
 欢迎所有的建议，观点，以及交流。你可以通过向我发送[邮件][about]或者[微博][weibo]私信联系到我。
 
 [elite]:     https://www.cs.sdu.edu.cn/jxjg/jyb.htm
+[ucas]:      https://www.ucas.ac.cn/
 [sdu]:       https://www.sdu.edu.cn/
 [about]:     https://www.likun.tech/about/
 [weibo]:     https://weibo.com/2350107911/profile?topnav=1&wvr=6&is_all=1
