--- a/_posts/articles/2019-11-17-sc19.md
+++ b/_posts/articles/2019-11-17-sc19.md
@@ -3,36 +3,40 @@ layout: article
 title: "A Post about SC19."
 categories: articles
 excerpt: "Experience of SC19 in Denver.    [CH]"
+modified: 2020-05-02
 tags: [conference]
 image:
   teaser: ./blog/sc19/coloradocenter_teaser.jpg
 ads: false
 ---
 
-Here are some examples of what a post with images might look like. If you want to display two or three images next to each other responsively use `figure` with the appropriate `class`. Each instance of `figure` is auto-numbered and displayed in the caption.
+# 一篇SC19的咕咕游记
+
+咕咕咕，SC19是去年的会议了。从开完会到现在的5个月里，我经历了一系列博士阶段可能会遇到的各种曲折离奇的故事，最终结果也还算不错，换了个方向继续边做项目边搞科研。因为新冠肺炎疫情的影响，也趁着五一假期在家富裕一点儿的时间，赶紧把这大脑中的cache写回一下。
 
 {% include toc.html %}
 
-## Figures (for images or video)
+## 前期准备
+根据SC19的大会主席Michelle Strout发的邮件来看，今年（时间手动滑稽）一共提交了344篇论文，最终录取了78篇，录取率只有22.6%。我做的工作是基于神威太湖之光，在五百万核上实现了OpenKMC——一个大规模的蒙特卡洛模拟。基于SPPARKS做的并行部分的框架，实现了自适应的通信算法，根据神威处理器主从核架构，在从核使用了AThread+OpenACC，最后实现了向量化加速。其实创新点不是很多，感觉工作还是偏工程性一些，没想到最后能搭上末班车杀进SC17，哈哈哈。在这里吐槽一下在神威上编程可真是麻烦。
 
-### One Up
+拿到邀请函后立即申请了北京的面签。**提前准备好各种材料，尽早预约面签日期，尽早选择面签时间**。因为面签的时间排在9点，实际12点多我才见到面签官。而这期间的将近四个小时全程排着长队一点点地向前蠕动，差一点体力透支-_-。因为是第一次去美帝，毫无疑问地被check了。不过总体还是很幸运，居然不到三个周就发签证了。
+
+
+## 到达美国
+今年SC是在科罗拉多的丹佛市召开。11月16日下午三点从北京首都机场出发，经过洛杉矶中转（转机**一定看好自己的行李**，因为不同航司对接，期间我们的行李搞丢了6个小时，心累），辗转在深夜到了丹佛机场。从丹佛机场到丹佛downtown有地铁，大概10刀左右的样子。
+
+我们的酒店是在丹佛希尔顿。睡醒之后就去了会场，也就是科罗拉多会议中心。Lawrence大街有免费的公交车，大约两三站就到了，全程走路也不过一刻钟。街区式的建筑布局，蔚蓝的天空，清新的空气，各种颜色的人们，让我们这些第一次公费来美帝的学生充满着新鲜感。带着护照迅速地办完大会注册，领取了材料：一个书包，大会手册，胸牌，以及开幕和闭幕餐券。
+
+第二天大会正式开始，见到了大会主席Michelle Strout。会场座无虚席，大会报告也很精彩（大脑cache读取失败）。下午就开启了各会场闲逛模式，期间大胆主动交流，也认识了一些伙伴。茶歇的餐点也是挺丰盛的，然而就是没有热水哈哈。晚上的展览开幕式搞得特别隆重，早早地人们就把展厅门口围堵地水泄不通。到了开幕时间进去后，里面的展商真是多地令人眼花缭乱。不愧是SC，比国内的会议大牌多了不少。NVIDIA老黄亲自坐镇派发红酒，机智的我趁机要了一张合影，感觉够我回来吹一阵子了哈哈哈。谷歌云现场搞了一个小比赛，本来以为会是什么ACM题，算法之类的，结果是他们自己搞了云服务器进行产品推广，按照他们给定的几项任务在他们的云服务器上进行模型建立和训练。操作了一把，感觉是傻瓜式操作，很容易get到了他们的奖品。其他不少厂商也都有一些小比赛和奖品派发，总体上还是挺有意思的。
+
+
+
 
 <figure>
 	<a href="https://www.likun.tech/images/blog/sc19/coloradocenter.jpg"><img src="https://www.likun.tech/images/blog/sc19/coloradocenter.jpg"></a>
-	<figcaption>Image caption.</figcaption>
+	<figcaption>SC19会场.</figcaption>
 </figure>
 
-### Two Up
-
-Apply the `half` class like so to display two images side by side that share the same caption.
-
-```html
-<figure class="half">
-	<img src="{{ site.url }}/images/image-filename-1.jpg">
-	<img src="{{ site.url }}/images/image-filename-2.jpg">
-	<figcaption>Caption describing these two images.</figcaption>
-</figure>
-```
 
 And you'll get something that looks like this:
 
@@ -42,33 +46,3 @@ And you'll get something that looks like this:
 	<figcaption>Two images.</figcaption>
 </figure>
 
-### Three Up
-
-Apply the `third` class like so to display three images side by side that share the same caption.
-
-```html
-<figure class="third">
-	<img src="{{ site.url }}/images/image-filename-1.jpg">
-	<img src="{{ site.url }}/images/image-filename-2.jpg">
-	<img src="{{ site.url }}/images/image-filename-3.jpg">
-	<figcaption>Caption describing these three images.</figcaption>
-</figure>
-```
-
-And you'll get something that looks like this:
-
-<figure class="third">
-	<img src="http://placehold.it/900x450.gif">
-	<img src="http://placehold.it/900x450.gif">
-	<img src="http://placehold.it/900x450.gif">
-	<figcaption>Three images.</figcaption>
-</figure>
-
-Testing images with links to larger images:
-
-<figure class="third">
-	<a href="http://placehold.it/1200x600.gif"><img src="http://placehold.it/900x450.gif"></a>
-	<a href="http://placehold.it/1200x600.gif"><img src="http://placehold.it/900x450.gif"></a>
-	<a href="http://placehold.it/1200x600.gif"><img src="http://placehold.it/900x450.gif"></a>
-	<figcaption>Three linked images.</figcaption>
-</figure>
