--- a/_posts/news/2019-09-03-sc19.md
+++ b/_posts/news/2019-09-03-sc19.md
@@ -13,3 +13,5 @@ image:
 
 
 \[2019.09\]: Our paper "OpenKMC: a KMC Design for a Hundred-Billion-Atom Simulation Using Millions of Cores on Sunway Taihulight" is accepted by SC'19. 
+
+<a href="https://sc19.supercomputing.org/presentation/index-id=pap236&sess=sess160.html"><br>More details.</a></p>
