--- a/_posts/news/2021-06-22-sc21folding.md
+++ b/_posts/news/2021-06-22-sc21folding.md
@@ -14,4 +14,4 @@ image:
 
 \[2021.06\]: Our paper "Reducing Redundancy in Data Organization and Arithmetic Calculation for Stencil Computations" is accepted by SC'21. Thanks Menor Liang Yuan and Yue Yue for collaboration!
 
-<a href="https://sc21.supercomputing.org/presentation/?id=pap180&sess=sess164"><br>More details.</a></p>
+<a href="https://sc21.supercomputing.org/presentation/?id=pap180&sess=sess164"><br>More details.</a>
