--- a/_posts/news/2021-06-22-sc21temoral.md
+++ b/_posts/news/2021-06-22-sc21temoral.md
@@ -14,4 +14,4 @@ image:
 
 \[2021.06\]: Our paper "Temporal Vectorization for Stencils" is accepted by SC'21. Thanks Menor Liang Yuan for collaboration!
 
-<a href="https://sc21.supercomputing.org/presentation/?id=pap170&sess=sess164"><br>More details.</a></p>
+<a href="https://sc21.supercomputing.org/presentation/?id=pap170&sess=sess164"><br>More details.</a>
