--- a/_posts/news/2019-09-03-sc19.md
+++ b/_posts/news/2019-09-03-sc19.md
@@ -7,7 +7,7 @@ tags: [news]
 modified: 2019-09-03
 share: false
 image: 
-  teaser: ./blog/welcome/god_teaser.jpg
+  teaser: ./news/sc19_400.png
   ads: false  
 ---
 
