--- a/_posts/news/2021-06-22-sc21temoral.md
+++ b/_posts/news/2021-06-22-sc21temoral.md
@@ -4,7 +4,7 @@ title: "SC'21"
 categories: news
 excerpt: "The related work of Computation Folding is accepted by SC'21."  
 tags: [news]
-modified: 2019-09-03
+modified: 2021-06-22
 share: false
 image: 
   teaser: ./news/sc21_400x250.png
@@ -12,6 +12,6 @@ image:
 ---
 
 
-\[2021.06\]: Our paper "Temporal Vectorization for Stencils" is accepted by SC'21. Thanks Menor Liang Yuan for collaboration!
+\[2021.06\] Our paper "Temporal Vectorization for Stencils" is accepted by SC'21. Thanks Menor Liang Yuan for collaboration!
 
 <a href="https://sc21.supercomputing.org/presentation/?id=pap170&sess=sess164"><br>More details.</a>
