--- a/_posts/news/2021-06-22-sc21temoral.md
+++ b/_posts/news/2021-06-22-sc21temoral.md
@@ -2,7 +2,7 @@
 layout: news
 title: "SC'21"
 categories: news
-excerpt: "The related work of Computation Folding is accepted by SC'21."  
+excerpt: "The related work of Temporal Stencils is accepted by SC'21."  
 tags: [news]
 modified: 2021-06-22
 share: false
