--- a/_posts/news/2021-06-23-sc21folding.md
+++ b/_posts/news/2021-06-23-sc21folding.md
@@ -12,6 +12,6 @@ image:
 ---
 
 
-\[2021.06\] Our paper "Reducing Redundancy in Data Organization and Arithmetic Calculation for Stencil Computations" is accepted by SC'21. Thanks Menor Liang Yuan and Yue Yue for collaboration!
+\[2021.06\] Our paper "Reducing Redundancy in Data Organization and Arithmetic Calculation for Stencil Computations" is accepted by SC'21. Thanks Mentor Liang Yuan and Yue Yue for collaboration!
 
 <a href="https://sc21.supercomputing.org/presentation/?id=pap180&sess=sess164"><br>More details.</a>
