--- a/_posts/news/2021-12-02-tpds2021.md
+++ b/_posts/news/2021-12-02-tpds2021.md
@@ -7,7 +7,7 @@ tags: [news]
 modified: 2021-12-02
 share: false
 image: 
-  teaser: ./news/td.jpg
+  teaser: ./news/td_400x250.jpg
   ads: false  
 ---
 
