--- a/_posts/news/2021-12-17-internjd211217.md
+++ b/_posts/news/2021-12-17-internjd211217.md
@@ -1,8 +1,8 @@
 ---
 layout: news
-title: "Microsoft Research Asia Full-time Internship Position"
+title: "Microsoft Research Asia Full-time Internship Positions"
 categories: news
-excerpt: "Microsoft Research Asia Full-time Internship Position."  
+excerpt: "Microsoft Research Asia Full-time Internship Positions."  
 tags: [news]
 modified: 2021-12-17
 share: false
@@ -12,7 +12,7 @@ image:
 ---
 
 {% include toc.html %}
-## Microsoft Research Asia Full-time Internship Position 1
+## Position 1
 Location: Building 2, No. 5 Dan Ling Street, Haidian District, Beijing
 
 Research Direction: Next generation scientific computing system
@@ -28,6 +28,59 @@ What You Will Do:
 * Document work and results in the form of journal papers and conference proceedings
 * Present work and results at scientific meetings
 
-##
+What is Required:
+* Familiar with Python and C/C++
+* Familiar with common productive tools, including Linux, Git, SSH, Docker, etc.
+* Experience of developing popular numerical methods, such as FDM, FEM, FVM, etc.
+* Experience of developing distributed code with MPI
+* Excellent written and oral communication skills
 
-<a href="https://www.computer.org/csdl/journal/td/5555/01/09647869/1ziKjzt9BHq"><br>More details.</a>
+Desired Qualifications:
+* Experience with PyTorch or other deep learning framework is a plus
+* Experience with popular neural network models, like CNN or GNN, is a plus
+
+How to Apply (Any of the following ways is OK): 
+* Email your CV to Xiaotian.Gao@microsoft.com
+* Email your CV to v-liku@microsoft.com
+* Contact me by other ways (Wechat, Phones, etc.)  
+
+## Position 2
+
+Location: Building 2, No. 5 Dan Ling Street, Haidian District, Beijing
+
+Research Direction: AI for science and scientific computing
+
+Duration: At least 3 month
+
+Deadline: Long-term effective
+
+What You Will Do:
+* Solve complex ordinary/partial differential equations with deep learning techniques
+* Solve the most challenging scientific problems with deep learning techniques
+* Document work and results in the form of journal papers and conference proceedings
+* Present work and results at scientific meetings
+
+What is Required:
+* Familiar with one of machine learning applications, such as CV, NLP, Graph, etc.
+* Familiar with popular deep learning frameworks, such as PyTorch and Tensorflow.
+* Familiar with commonly used productive tools, including Linux, Git, SSH, Docker, etc.
+* Excellent written and oral communication skills
+
+Desired Qualifications:
+* Science-related background, including but not restrict to math, physics, materials, chemistry, meteorology, etc., is a plus
+* Experience with Navier-Stokes equation, Schrodinger equation or density functional theory is a plus
+* Experience with recent deep learning methods to solve PDEs, like PINN, FNO or DeepONet, is a plus
+* Publication on top machine learning conferences or journals is a plus.
+
+
+
+Desired Qualifications:
+* Science-related background, including but not restrict to math, physics, materials, chemistry, meteorology, etc., is a plus
+* Experience with Navier-Stokes equation, Schrodinger equation or density functional theory is a plus
+* Experience with recent deep learning methods to solve PDEs, like PINN, FNO or DeepONet, is a plus
+* Publication on top machine learning conferences or journals is a plus
+
+How to Apply (Any of the following ways is OK): 
+* Email your CV to Xiaotian.Gao@microsoft.com
+* Email your CV to v-liku@microsoft.com
+* Contact me by other ways (Wechat, Phones, etc.)  
