--- a/_posts/news/2021-12-17-internjd211217.md
+++ b/_posts/news/2021-12-17-internjd211217.md
@@ -39,7 +39,7 @@ Desired Qualifications:
 * Experience with PyTorch or other deep learning framework is a plus
 * Experience with popular neural network models, like CNN or GNN, is a plus
 
-How to Apply (Any of the following ways is OK): 
+[^_^]:How to Apply (Any of the following ways is OK): 
 * Email your CV to Xiaotian.Gao@microsoft.com
 * Email your CV to v-liku@microsoft.com
 * Contact me by other ways (Wechat, Phones, etc.)  
