--- a/_posts/news/2021-12-17-internjd211217.md
+++ b/_posts/news/2021-12-17-internjd211217.md
@@ -40,9 +40,9 @@ Desired Qualifications:
 * Experience with popular neural network models, like CNN or GNN, is a plus
 
 [^_^]:How to Apply (Any of the following ways is OK): 
-* Email your CV to Xiaotian.Gao@microsoft.com
-* Email your CV to v-liku@microsoft.com
-* Contact me by other ways (Wechat, Phones, etc.)  
+[^_^]:* Email your CV to Xiaotian.Gao@microsoft.com
+[^_^]:* Email your CV to v-liku@microsoft.com
+[^_^]:* Contact me by other ways (Wechat, Phones, etc.)  
 
 ## Position 2
 
@@ -80,7 +80,7 @@ Desired Qualifications:
 * Experience with recent deep learning methods to solve PDEs, like PINN, FNO or DeepONet, is a plus
 * Publication on top machine learning conferences or journals is a plus
 
-How to Apply (Any of the following ways is OK): 
-* Email your CV to Xiaotian.Gao@microsoft.com
-* Email your CV to v-liku@microsoft.com
-* Contact me by other ways (Wechat, Phones, etc.)  
+[^_^]:How to Apply (Any of the following ways is OK): 
+[^_^]:* Email your CV to Xiaotian.Gao@microsoft.com
+[^_^]:* Email your CV to v-liku@microsoft.com
+[^_^]:* Contact me by other ways (Wechat, Phones, etc.)  
