--- a/_posts/research/2019-11-17-sc19.md
+++ b/_posts/research/2019-11-17-sc19.md
@@ -1,7 +1,7 @@
 ---
-layout: article
+layout: research
 title: "A Post about SC19."
-categories: articles
+categories: research
 excerpt: "Experience of SC19 in Denver.    [CH]"
 modified: 2020-05-02
 tags: [conference]
