--- a/_posts/collaborators/2022-09-01-zixuan.md
+++ b/_posts/collaborators/2022-09-01-zixuan.md
@@ -1,13 +1,13 @@
 ---
 layout: article
 title: "Welcome!"
-categories: articles
+categories: collaborators
 excerpt: "Welcome to Kun Li's homepage! [EN/CH]"
 tags: [thoughts]
 modified: 2020-05-02
 image:
   feature: ./blog/welcome/god.JPG
-  teaser: ./blog/welcome/god_teaser.jpg
+  teaser: ./collaborators/zixuan.jpg
 ads: false  
 ---
 
