--- a/_posts/collaborators/2022-09-01-zixuan.md
+++ b/_posts/collaborators/2022-09-01-zixuan.md
@@ -6,7 +6,7 @@ excerpt: "Welcome to Kun Li's homepage! [EN/CH]"
 tags: [thoughts]
 modified: 2020-05-02
 image:
-  feature: ./blog/welcome/god.JPG
+  #feature: ./blog/welcome/god.JPG
   teaser: ./collaborators/zixuan.jpg
 ads: false  
 ---
