--- a/_posts/collaborators/2022-09-01-zhichun.md
+++ b/_posts/collaborators/2022-09-01-zhichun.md
@@ -4,7 +4,7 @@ title: "Zhichun Li"
 categories: collaborators
 excerpt: "Experience of SC19 in Denver.    [CH]"
 modified: 2022-09-01
-tags: [conference]
+tags: [collaborators]
 image:
   teaser: ./collaborators/zhichun.jpg
 ads: false
