--- a/_posts/collaborators/2022-09-01-zixuan.md
+++ b/_posts/collaborators/2022-09-01-zixuan.md
@@ -3,7 +3,7 @@ layout: article
 title: "Welcome!"
 categories: collaborators
 excerpt: "Welcome to Kun Li's homepage! [EN/CH]"
-tags: [thoughts]
+tags: [collaborators]
 modified: 2020-05-02
 image:
   #feature: ./blog/welcome/god.JPG
