--- a/_posts/research/2016-09-02-welcome.md
+++ b/_posts/research/2016-09-02-welcome.md
@@ -1,7 +1,7 @@
 ---
-layout: article
+layout: research
 title: "Welcome!"
-categories: articles
+categories: research
 excerpt: "Welcome to Kun Li's homepage! [EN/CH]"
 tags: [thoughts]
 modified: 2020-05-02
