--- a/_posts/collaborators/2022-09-01-zhichun.md
+++ b/_posts/collaborators/2022-09-01-zhichun.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: "Zhichun Li"
-categories: article
+categories: articles
 excerpt: "Experience of SC19 in Denver.    [CH]"
 modified: 2022-09-01
 tags: [collaborators]
