--- a/_posts/research/2016-09-02-welcome.md
+++ b/_posts/research/2016-09-02-welcome.md
@@ -1,7 +1,7 @@
 ---
-layout: research
+layout: article
 title: "Welcome!"
-categories: research
+categories: collaborators
 excerpt: "Welcome to Kun Li's homepage! [EN/CH]"
 tags: [thoughts]
 modified: 2020-05-02
