--- a/_posts/collaborators/2022-09-01-zhichun.md
+++ b/_posts/collaborators/2022-09-01-zhichun.md
@@ -1,5 +1,5 @@
 ---
-layout: article
+layout: collaborators
 title: "Zhichun Li"
 categories: collaborators
 excerpt: "Experience of SC19 in Denver.    [CH]"
