--- a/_posts/collaborators/2022-09-01-zixuan.md
+++ b/_posts/collaborators/2022-09-01-zixuan.md
@@ -1,5 +1,5 @@
 ---
-layout: article
+layout: collaborators
 title: "Welcome!"
 categories: collaborators
 excerpt: "Welcome to Kun Li's homepage! [EN/CH]"
