--- a/_posts/collaborators/2022-09-01-zixuan.md
+++ b/_posts/collaborators/2022-09-01-zixuan.md
@@ -2,7 +2,7 @@
 layout: collaborators
 title: "Zixuan Wang"
 categories: collaborators
-excerpt: "PhD Student @ UCAS"
+excerpt: "PhD student @ UCAS"
 tags: [collaborators]
 modified: 2022-09-01
 image:
