--- a/_posts/collaborators/2022-09-14-yuetao.md
+++ b/_posts/collaborators/2022-09-14-yuetao.md
@@ -10,4 +10,4 @@ image:
 ads: false
 ---
 
-Yuetao Chen（陈岳涛） is a master student in Institute of Computing Technology and University of Chinese Academic of Sciense. He received Bachelor's degree in Beijing Jiaotong University. His research interests include high performance computing, machine learning applied to system and machine learning system.
+Yuetao Chen（陈岳涛） is a master student in Institute of Computing Technology and University of Chinese Academic of Sciense (UCAS). He received Bachelor's degree in Beijing Jiaotong University. His research interests include high performance computing, machine learning applied to system and machine learning system.
