--- a/_posts/collaborators/2022-09-14-tuowei.md
+++ b/_posts/collaborators/2022-09-14-tuowei.md
@@ -1,6 +1,6 @@
 ---
 layout: collaborators
-title: "Yuetao Chen"
+title: "Tuowei Wang"
 categories: collaborators
 excerpt: "Master student @ UCAS"
 modified: 2022-09-14
@@ -10,4 +10,4 @@ image:
 ads: false
 ---
 
-Yuetao Chen（陈岳涛） is a master student in Institute of Computing Technology and University of Chinese Academic of Sciense (UCAS). He received Bachelor's degree in Beijing Jiaotong University. His research interests include high performance computing, machine learning applied to system and machine learning system.
+Tuowei Wang (王拓为) is a final-year undergraduate student at Tsinghua University, Beijing, China. His research interests include high performance computing and machine learning system.
