--- a/_posts/collaborators/2022-09-22-tuowei.md
+++ b/_posts/collaborators/2022-09-22-tuowei.md
@@ -2,7 +2,7 @@
 layout: collaborators
 title: "Tuowei Wang"
 categories: collaborators
-excerpt: "Master student @ UCAS"
+excerpt: "Undergraduate student @ THU"
 modified: 2022-09-14
 tags: [collaborators]
 image:
