--- a/_posts/collaborators/2022-09-14-yuetao.md
+++ b/_posts/collaborators/2022-09-14-yuetao.md
@@ -2,7 +2,7 @@
 layout: collaborators
 title: "Yuetao Chen"
 categories: collaborators
-excerpt: "Undergraduate student @ THU"
+excerpt: "Master student @ UCAS"
 modified: 2022-09-14
 tags: [collaborators]
 image:
