--- a/_posts/collaborators/2022-09-01-zhichun.md
+++ b/_posts/collaborators/2022-09-01-zhichun.md
@@ -10,4 +10,4 @@ image:
 ads: false
 ---
 
-Zhichun Li (李治淳) is a final-year undergraduate student at Beijing University of Posts and Telecommunications (BUPT), Beijing, China. His research interests include parallel programming and domain-specific accelerators.
+Zhichun Li (李治淳) is a final-year undergraduate student at Beijing University of Posts and Telecommunications (BUPT), Beijing, China. He is going to pursue a PhD degree in University of Chinese Academy of Sciences (UCAS). His research interests include parallel programming and domain-specific accelerators.
