--- a/_posts/recruitment/2022-09-01-FY23Q2J1J2.md
+++ b/_posts/recruitment/2022-09-01-FY23Q2J1J2.md
@@ -1,6 +1,6 @@
 ---
 layout: collaborators
-title: "HEX Group intern recruitment"
+title: "Intern: HPC+AI (CLOSED)"
 categories: recruitment
 excerpt: "Mentor: Kun Li"
 modified: 2022-09-01
@@ -10,7 +10,8 @@ image:
 ads: false
 ---
 
-微软亚洲研究院系统组研究型实习生招聘，欢迎有意向的同学发送简历至kunli@microsoft.com
+微软亚洲研究院异构计算组研究型实习生招聘，欢迎有意向的同学发送简历至kunli@microsoft.com
+
 Location: No. 5 Dan Ling Street, Haidian District, Beijing
 
 Research Direction: HPC+AI, including parallel algorithm design; large-scale training optimization
@@ -18,12 +19,13 @@ Research Direction: HPC+AI, including parallel algorithm design; large-scale tra
 Duration: At least 3 month
 
 Job ID:
+
 ~~[Position FY23Q2J1] Optimize widely used parallel computing algorithms and AI operators.~~
 ~~[Position FY23Q2J2] Design & implement next generation AI model parallel system.~~
 
-What is Required:
-Familiar with Python and C/C++.
-Familiar with high-performance programing (MPI/NCCL/SIMD) and neural network models.
-Excellent written and oral communication skills in English.
+What is Required:  
+Familiar with Python and C/C++.  
+Familiar with high-performance programing (MPI/NCCL/SIMD) and neural network models.  
+Excellent written and oral communication skills in English.  
 Experience with publishing related academic papers in HPC/AI area is a plus.
 
