--- a/_posts/recruitment/2022-09-01-FY23Q2J3J4.md
+++ b/_posts/recruitment/2022-09-01-FY23Q2J3J4.md
@@ -2,7 +2,7 @@
 layout: collaborators
 title: "Intern: AI4Science"
 categories: recruitment
-excerpt: "Mentor: Xiaotian Gao"
+excerpt: "Mentor: Unassigned"
 modified: 2022-09-01
 tags: [recruitment]
 image:
