--- a/_posts/recruitment/2022-09-06-FY23Q2J5.md
+++ b/_posts/recruitment/2022-09-06-FY23Q2J5.md
@@ -2,7 +2,7 @@
 layout: collaborators
 title: "Intern: DL Tools"
 categories: recruitment
-excerpt: "Mentor: Unassigned"
+excerpt: "Mentor: N/A"
 modified: 2022-09-01
 tags: [recruitment]
 image:
