--- a/_posts/collaborators/2022-09-01-zhichun.md
+++ b/_posts/collaborators/2022-09-01-zhichun.md
@@ -1,7 +1,7 @@
 ---
 layout: collaborators
 title: "Zhichun Li"
-categories: collaborators
+categories: alumni
 excerpt: "Undergraduate student @ BUPT"
 modified: 2022-09-01
 tags: [collaborators]
@@ -11,3 +11,5 @@ ads: false
 ---
 
 Zhichun Li (李治淳) is a final-year undergraduate student at Beijing University of Posts and Telecommunications (BUPT), Beijing, China. He is going to pursue a PhD degree in University of Chinese Academy of Sciences (UCAS). His research interests include parallel programming and domain-specific accelerators.
+
+Intership: 9/1/2022 - 12/1/2022.
