--- a/_posts/recruitment/2022-09-01-FY23Q2J1J2.md
+++ b/_posts/recruitment/2022-09-01-FY23Q2J1J2.md
@@ -1,6 +1,6 @@
 ---
 layout: collaborators
-title: "Intern: HPC+AI (CLOSED)"
+title: "Intern: HPC+AI"
 categories: recruitment
 excerpt: "Mentor: Kun Li"
 modified: 2022-09-01
@@ -22,10 +22,11 @@ Job ID:
 
 ~~[Position FY23Q2J1] Optimize widely used parallel computing algorithms and AI operators.~~    
 ~~[Position FY23Q2J2] Design & implement next generation AI model parallel system.~~
+[Position FY23Q3J1] 系统优化/大规模科学计算.
+
 
 What is Required:  
-Familiar with Python and C/C++.  
-Familiar with high-performance programing (MPI/NCCL/SIMD) and neural network models.  
-Excellent written and oral communication skills in English.  
+Familiar with C/C++/Cuda.  
+Familiar with high-performance programing (MPI/NCCL/SIMD).   
 Experience with publishing related academic papers in HPC/AI area is a plus.
 
