--- a/_posts/collaborators/2022-09-01-zhichun.md
+++ b/_posts/collaborators/2022-09-01-zhichun.md
@@ -2,7 +2,7 @@
 layout: collaborators
 title: "Zhichun Li"
 categories: alumni
-excerpt: "Undergraduate student @ BUPT"
+excerpt: "Postgraduate @ UCAS"
 modified: 2022-09-01
 tags: [collaborators]
 image:
