--- a/_posts/collaborators/2023-02-24-yuhao.md
+++ b/_posts/collaborators/2023-02-24-yuhao.md
@@ -1,6 +1,6 @@
 ---
 layout: collaborators
-title: "Yinnan Zhou"
+title: "Yuhao Wang"
 categories: collaborators
 excerpt: "Postgraduate @ USTC"
 modified: 2023-02-24
