--- a/_posts/collaborators/2022-09-25-yinnan.md
+++ b/_posts/collaborators/2022-09-25-yinnan.md
@@ -2,7 +2,7 @@
 layout: collaborators
 title: "Yinnan Zhou"
 categories: collaborators
-excerpt: "Undergraduate student @ SUDA"
+excerpt: "Postgraduate @ USTC"
 modified: 2022-09-25
 tags: [collaborators]
 image:
