--- a/_posts/collaborators/2022-09-25-yinnan.md
+++ b/_posts/collaborators/2022-09-25-yinnan.md
@@ -1,7 +1,7 @@
 ---
 layout: collaborators
 title: "Yinnan Zhou"
-categories: collaborators
+categories: alumni
 excerpt: "Postgraduate @ USTC"
 modified: 2022-09-25
 tags: [collaborators]
@@ -11,3 +11,5 @@ ads: false
 ---
 
 Yinnan Zhou (周荫南) is a final-year undergraduate student at Soochow University, Suzhou, China. He is going to pursue a master's degree in University of Science and Technology of China (USTC). His research interests include high performance computing and resource scheduling optimization.
+
+Intership: 10/1/2022 - 4/30/2023.
