--- a/_posts/collaborators/2023-03-07-wenxuan.md
+++ b/_posts/collaborators/2023-03-07-wenxuan.md
@@ -1,7 +1,7 @@
 ---
 layout: collaborators
 title: "Wenxuan Cao"
-categories: collaborators
+categories: alumni
 excerpt: "Postgraduate @ UCAS"
 modified: 2023-03-07
 tags: [collaborators]
@@ -11,3 +11,5 @@ ads: false
 ---
 
 Wenxuan Cao (曹文轩) received the B.S. degree from Beihang University, China, in 2022, and currently is a master student at Institute of Computing Technology and University of Chinese Academic of Sciense (UCAS). His research lies in high performance computing, and he has participated in many projects related to the design of architecture and compilers.
+
+Intership: 3/1/2023 - 5/31/2023.
