--- a/_posts/collaborators/2022-09-25-yinnan.md
+++ b/_posts/collaborators/2022-09-25-yinnan.md
@@ -12,4 +12,4 @@ ads: false
 
 Yinnan Zhou (周荫南) is a final-year undergraduate student at Soochow University, Suzhou, China. He is going to pursue a master's degree in University of Science and Technology of China (USTC). His research interests include high performance computing and resource scheduling optimization.
 
-Intership: 10/1/2022 - 4/30/2023.
+Internship: 10/1/2022 - 4/30/2023.
