--- a/_posts/collaborators/2023-02-06-yuhao.md
+++ b/_posts/collaborators/2023-02-06-yuhao.md
@@ -1,7 +1,7 @@
 ---
 layout: collaborators
 title: "Yuhao Wang"
-categories: collaborators
+categories: alumni
 excerpt: "Postgraduate @ USTC"
 modified: 2023-02-06
 tags: [collaborators]
@@ -11,3 +11,5 @@ ads: false
 ---
 
 Yuhao Wang (王昱豪) is a fourth-year undergraduate at Wuhan University of Technology, Wuhan, China. He is soon to continue his education at the University of Science and Technology of China (USTC). His research interests include high-performance computing.
+
+Internship: 3/1/2023 - 8/27/2023.
