Team building update.

--- a/_posts/team_building/2022-09-01-FY23Q2J1J2.md
+++ b/_posts/team_building/2022-09-01-FY23Q2J1J2.md
@@ -1,32 +1,17 @@
 ---
 layout: collaborators
-title: "Intern: HPC+AI"
-categories: recruitment
-excerpt: "Mentor: Kun Li"
-modified: 2022-09-01
-tags: [recruitment]
+title: "Yinnan's checkout"
+categories: team_building
+#excerpt: "Mentor: Kun Li"
+modified: 2023-04-28
+tags: [team_building]
 image:
-  teaser: ./news/msra_intern.png
+  teaser: ./team_building/Image_20240123141809.jpg
 ads: false
 ---
 
-微软亚洲研究院异构计算组研究型实习生招聘，欢迎有意向的同学发送简历至kunli@microsoft.com
-
-Location: No. 5 Dan Ling Street, Haidian District, Beijing
-
-Research Direction: HPC+AI, including parallel algorithm design; large-scale training optimization
-
-Duration: At least 3 month
-
-Job ID:
-
-~~[Position FY23Q2J1] Optimize widely used parallel computing algorithms and AI operators.~~    
-~~[Position FY23Q2J2] Design & implement next generation AI model parallel system.~~
-[Position FY23Q3J1] 系统优化/大规模科学计算.
-
-
-What is Required:  
-Familiar with C/C++/Cuda.  
-Familiar with high-performance programing (MPI/NCCL/SIMD).   
-Experience with publishing related academic papers in HPC/AI area is a plus.
+<figure>
+	<a href="https://www.likun.tech/images/team_building/Image_20240123141824.jpg"><img src="https://www.likun.tech/images/team_building/Image_20240123141824.jpg"></a>
+	<figcaption>Group photo for Yinnan's checkout.</figcaption>
+</figure>
 
