--- a/_posts/collaborators/2024-07-15-ruokai.md
+++ b/_posts/collaborators/2024-07-15-ruokai.md
@@ -1,7 +1,7 @@
 ---
 layout: collaborators
 title: "Ruokai Chen"
-categories: collaborators
+categories: alumni
 excerpt: "Undergraduate Student @ WASHU"
 modified: 2024-07-15
 tags: [collaborators]
@@ -11,3 +11,5 @@ ads: false
 ---
 
 Ruokai Chen（陈若锴）is a junior, undergraduate student at Washington University in St. Louis, Missouri, United States. His research interests include high performance computing.
+
+Internship: 7/15/2024 - 8/20/2024.
