--- a/_posts/collaborators/2022-09-25-yinnan.md
+++ b/_posts/collaborators/2022-09-25-yinnan.md
@@ -6,10 +6,10 @@ excerpt: "Postgraduate @ USTC"
 modified: 2022-09-25
 tags: [collaborators]
 image:
-  teaser: ./collaborators/yinnan.jpg
+  teaser: ./collaborators/yinnan2.jpg
 ads: false
 ---
 
-Yinnan Zhou (周荫南) is a final-year undergraduate student at Soochow University, Suzhou, China. He is going to pursue a master's degree in University of Science and Technology of China (USTC). His research interests include high performance computing and resource scheduling optimization.
+<a href= "https://yinnanzhou.github.io/">Yinnan Zhou (周荫南) </a> is a final-year undergraduate student at Soochow University, Suzhou, China. He is going to pursue a master's degree in University of Science and Technology of China (USTC). His research interests include high performance computing and resource scheduling optimization.
 
 Internship: 10/1/2022 - 4/30/2023.
