--- a/_posts/collaborators/2024-11-27-kunli.md
+++ b/_posts/collaborators/2024-11-27-kunli.md
@@ -6,7 +6,7 @@ excerpt: "SR. Researcher @ HEX"
 modified: 2024-11-27
 tags: [collaborators]
 image:
-  teaser: ./collaborators/haozhi.jpg
+  teaser: ./collaborators/kunli.jpg
 ads: false
 ---
 
