--- a/_posts/collaborators/2022-09-06-yiwei.md
+++ b/_posts/collaborators/2022-09-06-yiwei.md
@@ -1,7 +1,7 @@
 ---
 layout: collaborators
 title: "Yiwei Zhang"
-categories: collaborators
+categories: alumni
 excerpt: "PhD student @ UCAS"
 modified: 2022-09-06
 tags: [collaborators]
@@ -11,3 +11,5 @@ ads: false
 ---
 
 Yiwei Zhang （张祎维） received the B.S. degree from the Department of Computer Science and Technology, Tsinghua University, China, in 2021. He is currently working toward the Ph.D degree at the State Key Laboratory of Computer Architecture, Institute of Computing Technology, Chinese Academy of Sciences, China. His research interests include high performance computing.
+
+Internship: 9/6/2022 - 1/1/2025.
