--- a/_posts/collaborators/2022-09-22-tuowei.md
+++ b/_posts/collaborators/2022-09-22-tuowei.md
@@ -1,7 +1,7 @@
 ---
 layout: collaborators
 title: "Tuowei Wang"
-categories: collaborators
+categories: alumni
 excerpt: "Undergraduate student @ THU"
 modified: 2022-09-14
 tags: [collaborators]
@@ -11,3 +11,5 @@ ads: false
 ---
 
 <a href= "https://pairshoe.github.io/">Tuowei Wang (王拓为)</a> is a final-year undergraduate student at Tsinghua University, Beijing, China. His research interests include high performance computing and machine learning system.
+
+Internship: 9/22/2022 - 5/23/2025.
