--- a/_posts/collaborators/2025-06-03-wenbin.md
+++ b/_posts/collaborators/2025-06-03-wenbin.md
@@ -1,9 +1,9 @@
 ---
 layout: collaborators
-title: "Qi Li"
+title: "Wenbin Li"
 categories: collaborators
 excerpt: "PhD student @ UCAS"
-modified: 2024-06-03
+modified: 2025-06-03
 tags: [collaborators]
 image:
   teaser: ./collaborators/wenbin.jpg
